# SASR-Track-Stuff

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  zlib.h
SeEditor/: AnimDebug.cpp  CharmyBee.cpp  CharmyBee.hpp  ForestExtractor.cpp  ForestToObj.cpp  ForestTreeDump.cpp  ForestUnpacker.cpp  Frontend.cpp  Frontend.hpp  LogicLoader.cpp  LogicLoader.hpp  NavigationLoader.cpp  NavigationLoader.hpp  Program.cpp  Program.hpp  SifParser.cpp  SifParser.hpp  SifToUnity.cpp  SifUnpacker.cpp  UnityExport.cpp  UnityExport.hpp  XpacUnpacker.cpp  XpacUnpacker.hpp
SeEditor/Dialogs/: TinyFileDialog.cpp  TinyFileDialog.hpp
SeEditor/Editor/: EditorSetup.cpp  EditorSetup.hpp  RacerSetup.cpp  RacerSetup.hpp  Scene.cpp  Scene.hpp  SceneCamera.cpp  SceneCamera.hpp  SceneManager.cpp  SceneManager.hpp  Selection.cpp  Selection.hpp
SeEditor/Editor/Actions/: AssetContexts.cpp  AssetContexts.hpp
SeEditor/Editor/Attributes/: CustomEditor.cpp  CustomEditor.hpp  InspectorAttribute.cpp  InspectorAttribute.hpp  MenuItemAttribute.cpp  MenuItemAttribute.hpp
SeEditor/Editor/Menu/: NodeAttributesMenu.cpp  NodeAttributesMenu.hpp  SeAttributeMenu.cpp  SeAttributeMenu.hpp
SeEditor/Editor/Panel/: AssetPanel.cpp  AssetPanel.hpp  IEditorPanel.cpp  IEditorPanel.hpp  InspectorPanel.cpp  InspectorPanel.hpp  ScenePanel.cpp  ScenePanel.hpp
SeEditor/Editor/Tools/: EditorTool.cpp  EditorTool.hpp  NavigationTool.cpp  NavigationTool.hpp  SplineTool.cpp  SplineTool.hpp
SeEditor/Editor/Window/: IEditorWindow.hpp  ProjectSelectionWindow.cpp  ProjectSelectionWindow.hpp  TrackEditorWindow.cpp  TrackEditorWindow.hpp
SeEditor/Forest/: ForestArchive.hpp  ForestTypes.cpp  ForestTypes.hpp
SeEditor/Installers/: SlModelInstaller.cpp  SlModelInstaller.hpp  SlTextureInstaller.cpp  SlTextureInstaller.hpp
SeEditor/Managers/: SlFile.cpp  SlFile.hpp
SeEditor/Renderer/: EditorFramebuffer.cpp  EditorFramebuffer.hpp  PrimitiveRenderer.cpp  PrimitiveRenderer.hpp  SlRenderBuffers.cpp  SlRenderBuffers.hpp  SlRenderer.cpp  SlRenderer.hpp  SlTexturePlatformInfo.cpp  SlTexturePlatformInfo.hpp
SlLib.MarioKart/: BfresImporter.cpp  BfresImporter.hpp  CollisionImporter.cpp  CollisionImporter.hpp  KartConstants.cpp  KartConstants.hpp  Program.cpp  Program.hpp  Szs.cpp  Szs.hpp  TrackImportConfig.cpp  TrackImportConfig.hpp  TrackImporter.cpp  TrackImporter.hpp
SlLib.MarioKart/ssBVH/: OpenTKHelper.cpp  OpenTKHelper.hpp  SSAABB.cpp  SSAABB.hpp  SSRay.cpp  SSRay.hpp  SSSphere.cpp  SSSphere.hpp  ssBVH.cpp  ssBVH.hpp  ssBVH_Node.cpp  ssBVH_Node.hpp  ssBVH_Triangle.cpp  ssBVH_Triangle.hpp
SlLib.Workspace/: ContextualTimer.cpp  ContextualTimer.hpp  Program.cpp  Program.hpp  RacerDataManager.cpp  RacerDataManager.hpp  SsrDownloadableContentDeployer.cpp  SsrDownloadableContentDeployer.hpp
SlLib/Attributes/: IsDefinitionOfAttribute.cpp  IsDefinitionOfAttribute.hpp  IsInstanceOfAttribute.cpp  IsInstanceOfAttribute.hpp
SlLib/Audio/: AkFilePackage.cpp  AkFilePackage.hpp
SlLib/Enums/: AudioVolumeShape.cpp  AudioVolumeShape.hpp  CameoFlag.cpp  CameoFlag.hpp  CameoType.cpp  CameoType.hpp  CollisionFlags.cpp  CollisionFlags.hpp  DriveMode.cpp  DriveMode.hpp  DynamicObjectType.cpp  DynamicObjectType.hpp  EnumHelpers.hpp  InstanceTimeStep.cpp  InstanceTimeStep.hpp  Laps.cpp  Laps.hpp  LeaderType.cpp  LeaderType.hpp  LightDataFlag.cpp  LightDataFlag.hpp  LightType.cpp  LightType.hpp  ParticleForceMode.cpp  ParticleForceMode.hpp  SurfaceFlags.cpp  SurfaceFlags.hpp  SurfaceType.cpp  SurfaceType.hpp  TriggerPhantomHashInfo.cpp  TriggerPhantomHashInfo.hpp  TriggerPhantomShape.cpp  TriggerPhantomShape.hpp  VehicleFlags.cpp  VehicleFlags.hpp  WeaponPodMessage.cpp  WeaponPodMessage.hpp
SlLib/Excel/: Cell.cpp  Cell.hpp  CellType.cpp  CellType.hpp  Column.cpp  Column.hpp  ExcelData.cpp  ExcelData.hpp  Worksheet.cpp  Worksheet.hpp
SlLib/Extensions/: ByteReaderExtensions.cpp  ByteReaderExtensions.hpp  ByteWriterExtensions.cpp  ByteWriterExtensions.hpp  FileSystemExtensions.cpp  FileSystemExtensions.hpp
SlLib/Filesystem/: IDirectory.cpp  IDirectory.hpp  IFileSystem.cpp  IFileSystem.hpp  MappedFileSystem.cpp  MappedFileSystem.hpp  SlPackFile.cpp  SlPackFile.hpp  SlPackFileTocEntry.cpp  SlPackFileTocEntry.hpp  SsrPackFile.cpp  SsrPackFile.hpp  SsrPackFileEntry.cpp  SsrPackFileEntry.hpp
SlLib/IO/: SlAnimImporter.cpp  SlAnimImporter.hpp  SlCollisionIO.cpp  SlCollisionIO.hpp  SlImportConfig.cpp  SlImportConfig.hpp  SlImportType.cpp  SlImportType.hpp  SlSceneExporter.cpp  SlSceneExporter.hpp  SlSceneImporter.cpp  SlSceneImporter.hpp
SlLib/Lookup/: ExcelPropertyNameLookup.cpp  ExcelPropertyNameLookup.hpp
SlLib/Math/: Vector.hpp
SlLib/Resources/: SlAnim.cpp  SlAnim.hpp  SlConstantBuffer.cpp  SlConstantBuffer.hpp  SlConstantBufferDesc.cpp  SlConstantBufferDesc.hpp  SlMaterial2.cpp  SlMaterial2.hpp  SlModel.cpp  SlModel.hpp  SlResourceCollision.cpp  SlResourceCollision.hpp  SlSampler.cpp  SlSampler.hpp  SlShader.cpp  SlShader.hpp  SlSkeleton.cpp  SlSkeleton.hpp  SlTexture.cpp  SlTexture.hpp
SlLib/Serialization/: Crumb.cpp  Crumb.hpp  IPlatformConvertable.cpp  IPlatformConvertable.hpp  IResourceSerializable.cpp  IResourceSerializable.hpp  ISaveBuffer.cpp  ISaveBuffer.hpp  ISumoResource.cpp  ISumoResource.hpp  ResourceLoadContext.cpp  ResourceLoadContext.hpp  ResourceSaveContext.cpp  ResourceSaveContext.hpp  Slab.cpp  Slab.hpp
SlLib/SumoTool/: ISumoToolResource.cpp  ISumoToolResource.hpp  SiffChunk.cpp  SiffChunk.hpp  SiffFile.cpp  SiffFile.hpp  SiffResourceType.cpp  SiffResourceType.hpp  SumoToolPackage.cpp  SumoToolPackage.hpp  SumoToolPackageFile.cpp  SumoToolPackageFile.hpp
SlLib/Utilities/: CryptUtil.cpp  CryptUtil.hpp  DdsUtil.cpp  DdsUtil.hpp  Gx2Util.cpp  Gx2Util.hpp  MathUtils.cpp  MathUtils.hpp  SkeletonUtil.cpp  SkeletonUtil.hpp  SlUtil.cpp  SlUtil.hpp
UnityTooling/: CMakeLists.txt
UnityTooling/examples/: simple_scene.cpp
UnityTooling/include/UnityTooling/: SceneBuilder.h
UnityTooling/src/: SceneBuilder.cpp
build_ninja/: CMakeCache.txt
build_nmake/: CMakeCache.txt
tests/: type6_decode_tests.cpp
(+553 files in other folders)
